Fixed z-index issue, fixed is-playing state

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,7 +100,7 @@ body {
     top: 41px;
 }
 
-.queue li.playing {
+.queue li.is-playing {
     border-left: 5px solid #fff;
 }
 
@@ -116,6 +116,7 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
+    z-index: 20;
 }
 
 .results.is-visible {
